# SeQUeNCe

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Graph.gv  LICENSE  MANIFEST.in  Makefile  README.md  gui.py  multithreading-benchmark.md  pyproject.toml  requirements.txt  run.py  setup.py  swap_var_decoherence.ipynb
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: run_staged_ruff.py
.github/workflows/: ci.yml  development.yml  hayek_pipeline.yml  main.yml  mirror_gitlab.yml  pr_checks.yml  pr_source_check.yml  publish.yml  release.yml  validation.yml
docs/: .readthedocs.yaml  Makefile  README.md  requirements.txt
docs/scripts/: generate_reference_rst.py
docs/source/: conf.py  index.rst
example/: BB84_eg.ipynb  README.md  absorptive_experiment.py  absorptive_fidelity.py  absorptive_fidelity_graph.py  absorptive_graph.py  absorptive_rate.py  absorptive_rate_graph.py  bb84_logging.py  cqx_simulation.py  cross_val.py  dark_count_timebin.py  distance_bb84.py  distance_cascade.py  distance_timebin.py  draw_topo.py  experiments.py  get_test.py  photon_test.py  qkd.ipynb  qutip_integration.py  random_request_network.ipynb  random_request_network_mod.ipynb  sequence_trajectree.py  star_network.json  starlight.json  starlight_experiments.py  teleportation.py  teleportation_simulation.py  three_node_eg_ep_es-old.ipynb  three_node_eg_ep_es.ipynb  timebin_no_cascade.py  timing_test.py  two_flow.py  two_node_eg.ipynb
example/ANTS_demos_2023/: GUI_and_code_demo.ipynb  GUI_and_code_demo_filled.ipynb
example/AbsorptiveMemory/: absorptive_fidelity_graph.py
example/DQS_sim/: DQS_README.md  ghz_app.py  parallel_simple_network_workflow.py  plot_c_3_points.py  plot_c_sweep_coherence.py  plot_c_sweep_cutoff.py  plot_c_sweep_distance.py  qutip_integration.py  qutip_utilities.ipynb  sequence_sim.py  simple_network.py  simple_network_workflow.py  testing_c_3_points.py
example/QCE_demos/: Teleport_demo.ipynb  Teleport_demo_filled.ipynb  star_network_modified.json
example/QCE_demos_2022/: GUI_and_code_demo.ipynb  Teleport_demo.ipynb  Teleport_demo_filled.ipynb  modify_script_method_function.ipynb
example/QCE_demos_2023/: GUI_and_code_demo.ipynb  GUI_and_code_demo_filled.ipynb
example/QLAN/: __init__.py  gen_ghz3_example.py  gen_ghz_example.py  graph_state_protocol.py  linear_graph_state_gen.py  local_ghz_protocol.py  qlan_app.py  qlan_client.py  qlan_correction_protocol.py  qlan_example.ipynb  qlan_measurement_protocol.py  qlan_orchestrator.py  qlan_test.py  set_linear_graph_5.py
example/Quantum Transduction/: EntanglementSwapping.py
example/QuantumTransduction/: ConversionProtocols.py  DirectConversion.py  EntanglementSwapping.py  SwappingProtocols.py
example/SC24/: SC24_tutorial_optics.ipynb  exp_1.ipynb  exp_2.ipynb  exp_3.ipynb
example/Transducer Examples/: DirectConversion  DirectConversion2  MyProtocols  RemoteNode2  Swapping2  TransdcuerProva2
example/Transducer_Examples/: ConversionProtocols.py  DirectConversion  DirectConversion.py  DirectConversion2  DirectConversion2.py  EntanglementSwapping.py  EntanglementSwapping2  ProvaSorgente  RemoteNode  Swapping2.py  SwappingProtocols.py  TransducerProva.py  TransducerProva_copy.py  TransductionComponent.py
example/absorptive_memory/: absorptive_experiment.py  absorptive_fidelity.py  absorptive_fidelity_graph.py  absorptive_graph.py  absorptive_rate.py  absorptive_rate_graph.py
example/architecture_demo/: config_format_demo.py  create_topo_demo.py  new_topology_demo.py
example/demo_for_beginners/: README.md  random_request_network.ipynb  star_network.json  swapping_fidelity_wait_time_fix.ipynb  teleport_2node.ipynb  teleport_2node.json  three_node_eg_ep_es.ipynb  two_node_eg.ipynb
example/eg_experiment/: README.md  eg_experiment.py  two_node.json
example/qkd/: bb84_logging.py  qkd.ipynb
example/quantum_transduction/: conversion_protocols.py  direct_conversion.py  entanglement_swapping.py  fock_quantum_channel.py  swapping_protocols.py
example/registry_demo/: custom_node_demo.py  demo_config.json
example/results/: absorptive.json
example/starlight/: README.md  starlight.json  starlight_experiments.py
example/topology_extensions/: README.md  custom_router_node.py  heterogeneous_midpoints.json  heterogeneous_midpoints.py  registry_pipeline_demo.json  registry_pipeline_demo.py
example/topology_refactor/: create_topo_demo.py  new_topo_demo.json  new_topo_demo.py
example/trajectree_integration/: MIM.ipynb  MIM_config.json  (+1 more)
mpi_tests/: linear_topo.py  net_with_flow_info.py  p_ring.py  p_ring_async.py  qm_server.py  rand_flow_by_hop.py  sequential_ring.py
parallel/: Makefile  README.md  get_port.py  qm_server.py  requirements.txt  setup.py
quantum_manager_server/: CMakeLists.txt
quantum_manager_server/src/: circuit.cpp
sequence/: __init__.py  config.py  constants.py  message.py  protocol.py
sequence_projects/: FIO_Runner.ipynb  SC24_tutorial_optics.ipynb  TN_swapping.ipynb  TN_swapping_direct.ipynb  fafo.ipynb  int_test.py  integration_test.ipynb  validation.ipynb  validation_W_isolation.ipynb
src/: .dlcz.py.swp  .encoding.py.swp  .entanglement_swap.py.swp  .protocols.py.swp  .topology.py.swp  BB84.py  Node.py  OpticalChannel.py  Photon.py  Teleportation.py  __init__.py  cascade.py  config.json  control_protocols.py  controller.py  cqx_simulation.py  dark_bb84.py  dark_cascade.py  dark_count_timebin.py  detector.py  distance_bb84.py  distance_cascade.py  dlcz.py  efficiency_bb84.py  efficiency_cascade.py  encoding.py  entanglement_swap.py  entity.py  event.py  eventlist.py  experiments.py  freq_mean_bb84.py  light_source.py  message.py  node.py  node1.txt  node2.txt  photon.py  process.py  protocol.py  (+14 more)
tests/: README.md
utils/: bsm_prob_timing.py  cavity_vs_fidelity.py  config_generator_line.py  config_generator_ring.py  config_generator_star.py  dict_lock.py  dict_timing.py  draw_topo.py  generator_utils.py  lock_test.py  memory_efficiency_fidelity.py  qmanager_timing.py  timing_test.py  two_node.json  two_node_prob.json
(+719 files in other folders)
